[project]
name = "checkers"
version = "0.1.0"
description = "A collection of scripts for checking server status. Supports heartbeat, DNS, and Docker checks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.8.0",
    "docker>=7.1.0",
    "ping3>=5.1.5",
    "rich>=14.2.0",
]
